Aula1 Projeto Completo - Cadastro de empresa, cadastro e login

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -37,7 +37,7 @@
                     <input type="password" class="form-control input-pers" name="confirmar_senha" placeholder="Confirme sua senha!">
                     <div class="centralizar">
                         <input type="submit" class="btn btn-indigo" value="cadastrar">
-                        <a href="#" class="texto">Já Possuo uma conta</a>
+                        <a href="{% url 'logar' %}" class="texto">Já Possuo uma conta</a>
                     </div>
                 </form>
             </div>
